# openapi-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  NOTES.md  README.md  README_ESEMPIO.md  TODO.md  USAGE.md
.github/assets/images/: repo-header-a4.txt
docs/: _readme.md  callbacks.md  contributing.md  crates-io.md  openapi-slugs.md
oas/: 00-oas-list.txt
src/: cli.rs  client.rs  config.rs  main.rs  scopes.rs
src/commands/: ai.rs  automotive.rs  cadastre.rs  certified_email.rs  chamber_of_commerce.rs  company.rs  docuengine.rs  domains.rs  esignature.rs  exchange_rate.rs  geocoding.rs  info.rs  invoice.rs  massive_rem.rs  mod.rs  oauthv2.rs  paying_bills.rs  pdf.rs  postal_service.rs  real_estate.rs  risk.rs  sdi.rs  sms.rs  time_stamping.rs  token.rs  trust.rs  visengine.rs  zip_codes.rs
tests/: commands-test.sh
tests/commands-test/: ai.sh  automotive.sh  bollettini.sh  cadastre.sh  cap.sh  catasto.sh  certified-email.sh  chamber-of-commerce.sh  company.sh  docuengine.sh  domains.sh  esignature.sh  exchange-rate.sh  exchange.sh  geocoding.sh  info.sh  invoice.sh  marchetemporali.sh  massive-rem.sh  oauth.sh  oauthv2.sh  paying-bills.sh  pdf.sh  pec.sh  pecmassiva.sh  postal-service.sh  real-estate.sh  realestate.sh  risk.sh  sdi.sh  sms.sh  smsv2.sh  time-stamping.sh  token.sh  trust.sh  ufficiopostale.sh  visengine.sh  visurecamerali.sh  zip-codes.sh
