[package]
name = "openapi-cli"
version = "0.1.0"
license = "MIT"
authors = ["Francesco Bianco (@francescobianco)", "Openapi® <hello@openapi.com>"]
edition = "2024"
description = "CLI client for Openapi.com APIs"
readme = "docs/crates-io.md"
repository = "https://github.com/openapi/openapi-cli"
categories = ["api-bindings", "web-programming", "asynchronous", "authentication", "development-tools"]
documentation = "https://console.openapi.com/"
homepage = "https://openapi.com/"
keywords = ["openapi", "sdk", "client"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"

[[bin]]
name = "openapi"
path = "src/main.rs"
